# FastAPI-Cookiecutter-V2

./: .drone.yml  .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_directory}}/: .drone.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
{{cookiecutter.project_directory}}/app/: __init__.py  broker.py  config.py  containers.py  db.py  exceptions.py  main.py  security.py  utils.py
{{cookiecutter.project_directory}}/app/repositories/: __init__.py  base.py  user.py
{{cookiecutter.project_directory}}/app/router/: __init__.py  health.py
{{cookiecutter.project_directory}}/app/schema/: __init__.py  auth.py  generic.py  user.py
{{cookiecutter.project_directory}}/app/services/: __init__.py  auth.py  http.py  log.py  sentry.py
{{cookiecutter.project_directory}}/env/: drone.env  example.env
{{cookiecutter.project_directory}}/migrations/models/: 0_20230412070949_init.py
{{cookiecutter.project_directory}}/prestart/: check_connection.py  init_data.py
{{cookiecutter.project_directory}}/proxy/: nginx.conf
{{cookiecutter.project_directory}}/script/: entrypoint.sh  init.sh
{{cookiecutter.project_directory}}/test/: conftest.py  test_broker.py
{{cookiecutter.project_directory}}/test/router/: test_health.py
{{cookiecutter.project_directory}}/test/services/: test_auth.py
